 * When reaching server limits, such as MaxRequestsPerChild, the HTTP/2 connection    send a GOAWAY frame much too early on new connections, leading to invalid    protocol state and a client failing the request. See PR65731 at    <https://bz.apache.org/bugzilla/show_bug.cgi?id=65731>.    The module now initializes the HTTP/2 protocol correctly and allows the    client to submit one request before the shutdown via a GOAWAY frame    is being announced.

No changes-entries, since this fix is proposed for backport on the 1.15.x
module codebase in 2.4.x in a separate PR.


git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/trunk@1895724 13f79535-47bb-0310-9956-ffa450edef68